# telegram_api_for_bot

./: .gitmodules  CMakeLists.txt  README.md  makefile
include/: .tebot.h.swp  tebot.h
src/: .tebot.c.swp  tebot.c
